added comment line

--- a/Dicom-Nifty.ipynb
+++ b/Dicom-Nifty.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,9 @@
    ],
    "source": [
     "# !pip install pydicom\n",
-    "%pip install pylibjpeg"
+    "#install necessary packages\n",
+    "# %pip install pylibjpeg\n",
+    "# %pip install numpy"
    ]
   },
   {
